TP4/src/ejemplo.output
Terminals unused in grammar

   VOID
   MAYORIGUAl


Estado 127 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 128 conflictos: 27 desplazamiento(s)/reducción(ones)
Estado 168 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 169 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: funcion
    4     | sentencia
    5     | error ';'

    6 $@1: /* vacío */

    7 funcion: TIPO_DATO ID $@1 parametros

    8 parametros: '(' listaParametros ')' declaracionODefinicion

    9 declaracionODefinicion: ';'
   10                       | sentCompuesta

   11 listaParametros: /* vacío */
   12                | tipo
   13                | listaParametros ',' tipo

   14 tipo: TIPO_DATO opcionId

   15 opcionId: /* vacío */
   16         | ID

   17 sentencia: sentCompuesta
   18          | sentExpresion
   19          | sentSeleccion
   20          | sentIteracion
   21          | sentSalto
   22          | sentEtiquetada

   23 sentCompuesta: '{' decalracionOSentencia '}'

   24 decalracionOSentencia: /* vacío */
   25                      | decalracionOSentencia listaDeclaraciones
   26                      | decalracionOSentencia listaSentencias

   27 listaDeclaraciones: sentenciaDeclaracion
   28                   | listaDeclaraciones sentenciaDeclaracion

   29 listaSentencias: sentencia
   30                | listaSentencias sentencia

   31 $@2: /* vacío */

   32 sentenciaDeclaracion: TIPO_DATO $@2 listaVarSimples ';'

   33 listaVarSimples: unaVarSimple
   34                | unaVarSimple ',' listaVarSimples

   35 $@3: /* vacío */

   36 unaVarSimple: ID $@3 tipoVariable asignacion

   37 tipoVariable: /* vacío */
   38             | array
   39             | puntero

   40 asignacion: /* vacío */
   41           | '=' inicializador

   42 puntero: '*'
   43        | '*' puntero

   44 array: '[' exp ']'
   45      | '[' exp ']' array

   46 inicializador: expAsignacion
   47              | '{' listaDeInicializadores '}'

   48 listaDeInicializadores: inicializador
   49                       | listaDeInicializadores ',' inicializador

   50 sentExpresion: exp ';'
   51              | ';'

   52 sentSeleccion: IF '(' exp ')' sentencia
   53              | IF '(' exp ')' sentencia ELSE sentencia
   54              | SWITCH '(' exp ')' sentencia

   55 sentIteracion: WHILE '(' exp ')' sentencia
   56              | DO sentencia WHILE '(' exp ')' ';'
   57              | FOR '(' exp ';' exp ';' exp ')' sentencia

   58 sentEtiquetada: CASE exp ':' sentencia
   59               | DEFAULT ':' sentencia
   60               | ID ':' sentencia

   61 sentSalto: RETURN exp ';'
   62          | BREAK ';'
   63          | CONTINUE ';'
   64          | GOTO ID ';'

   65 exp: expAsignacion
   66    | exp ',' expAsignacion

   67 expAsignacion: expCondicional
   68              | expUnaria operAsignacion expAsignacion

   69 expCondicional: expOr
   70               | expOr '?' exp ':' expCondicional

   71 operAsignacion: '='
   72               | ASIGNACION_INCREMENTO
   73               | ASIGNACION_DECREMENTO
   74               | ASIGNACION_PRODUCTO
   75               | ASIGNACION_DIVISION

   76 expOr: expAnd
   77      | expOr OR expAnd

   78 expAnd: expIgualdad
   79       | expAnd AND expIgualdad

   80 expIgualdad: expRelacional
   81            | expIgualdad IGUALDAD expRelacional
   82            | expIgualdad DESIGUALDAD expRelacional

   83 expRelacional: expAditiva
   84              | expRelacional '<' expAditiva
   85              | expRelacional '>' expAditiva
   86              | expRelacional MENORIGUAL expAditiva
   87              | expRelacional MAYORIGUAL expAditiva

   88 expAditiva: expMultiplicativa
   89           | expAditiva '+' expMultiplicativa
   90           | expAditiva '-' expMultiplicativa

   91 expMultiplicativa: expUnaria
   92                  | expMultiplicativa '*' expUnaria
   93                  | expMultiplicativa '/' expUnaria
   94                  | expMultiplicativa '%' expUnaria

   95 expUnaria: expSufijo
   96          | INCREMENTO expUnaria
   97          | DECREMENTO expUnaria
   98          | '-' expUnaria
   99          | '+' expUnaria
  100          | '~' expUnaria
  101          | '!' expUnaria
  102          | '&' expUnaria
  103          | puntero expUnaria
  104          | SIZEOF '(' expUnaria ')'
  105          | SIZEOF '(' TIPO_DATO ')'

  106 expSufijo: expPrimaria
  107          | expSufijo array
  108          | expSufijo '(' listaArgumentos ')'
  109          | expSufijo '.' ID
  110          | expSufijo FLECHA ID
  111          | expSufijo INCREMENTO
  112          | expSufijo DECREMENTO

  113 expPrimaria: ID
  114            | ENTERO
  115            | REAL
  116            | LITERAL_CADENA
  117            | '(' exp ')'

  118 listaArgumentos: /* vacío */
  119                | expAsignacion
  120                | listaArgumentos ',' expAsignacion


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 101
'%' (37) 94
'&' (38) 102
'(' (40) 8 52 53 54 55 56 57 104 105 108 117
')' (41) 8 52 53 54 55 56 57 104 105 108 117
'*' (42) 42 43 92
'+' (43) 89 99
',' (44) 13 34 49 66 120
'-' (45) 90 98
'.' (46) 109
'/' (47) 93
':' (58) 58 59 60 70
';' (59) 5 9 32 50 51 56 57 61 62 63 64
'<' (60) 84
'=' (61) 41 71
'>' (62) 85
'?' (63) 70
'[' (91) 44 45
']' (93) 44 45
'{' (123) 23 47
'}' (125) 23 47
'~' (126) 100
error (256) 5
REAL (258) 115
ENTERO (259) 114
LITERAL_CADENA (260) 116
OR (261) 77
AND (262) 79
IGUALDAD (263) 81
DESIGUALDAD (264) 82
MAYORIGUAL (265) 87
MENORIGUAL (266) 86
INCREMENTO (267) 96 111
DECREMENTO (268) 97 112
ASIGNACION_INCREMENTO (269) 72
ASIGNACION_DECREMENTO (270) 73
ASIGNACION_PRODUCTO (271) 74
ASIGNACION_DIVISION (272) 75
FLECHA (273) 110
IF (274) 52 53
ELSE (275) 53
SWITCH (276) 54
WHILE (277) 55 56
DO (278) 56
FOR (279) 57
RETURN (280) 61
CONTINUE (281) 63
BREAK (282) 62
CASE (283) 58
DEFAULT (284) 59
VOID (285)
GOTO (286) 64
TIPO_DATO (287) 7 14 32 105
ID (288) 7 16 36 60 64 109 110 113
SIZEOF (289) 104 105
MAYORIGUAl (290)


No terminales con las reglas donde aparecen

$accept (58)
    en la izquierda: 0
input (59)
    en la izquierda: 1 2, en la derecha: 0 2
line (60)
    en la izquierda: 3 4 5, en la derecha: 2
funcion (61)
    en la izquierda: 7, en la derecha: 3
$@1 (62)
    en la izquierda: 6, en la derecha: 7
parametros (63)
    en la izquierda: 8, en la derecha: 7
declaracionODefinicion (64)
    en la izquierda: 9 10, en la derecha: 8
listaParametros (65)
    en la izquierda: 11 12 13, en la derecha: 8 13
tipo (66)
    en la izquierda: 14, en la derecha: 12 13
opcionId (67)
    en la izquierda: 15 16, en la derecha: 14
sentencia (68)
    en la izquierda: 17 18 19 20 21 22, en la derecha: 4 29 30 52 53
    54 55 56 57 58 59 60
sentCompuesta (69)
    en la izquierda: 23, en la derecha: 10 17
decalracionOSentencia (70)
    en la izquierda: 24 25 26, en la derecha: 23 25 26
listaDeclaraciones (71)
    en la izquierda: 27 28, en la derecha: 25 28
listaSentencias (72)
    en la izquierda: 29 30, en la derecha: 26 30
sentenciaDeclaracion (73)
    en la izquierda: 32, en la derecha: 27 28
$@2 (74)
    en la izquierda: 31, en la derecha: 32
listaVarSimples (75)
    en la izquierda: 33 34, en la derecha: 32 34
unaVarSimple (76)
    en la izquierda: 36, en la derecha: 33 34
$@3 (77)
    en la izquierda: 35, en la derecha: 36
tipoVariable (78)
    en la izquierda: 37 38 39, en la derecha: 36
asignacion (79)
    en la izquierda: 40 41, en la derecha: 36
puntero (80)
    en la izquierda: 42 43, en la derecha: 39 43 103
array (81)
    en la izquierda: 44 45, en la derecha: 38 45 107
inicializador (82)
    en la izquierda: 46 47, en la derecha: 41 48 49
listaDeInicializadores (83)
    en la izquierda: 48 49, en la derecha: 47 49
sentExpresion (84)
    en la izquierda: 50 51, en la derecha: 18
sentSeleccion (85)
    en la izquierda: 52 53 54, en la derecha: 19
sentIteracion (86)
    en la izquierda: 55 56 57, en la derecha: 20
sentEtiquetada (87)
    en la izquierda: 58 59 60, en la derecha: 22
sentSalto (88)
    en la izquierda: 61 62 63 64, en la derecha: 21
exp (89)
    en la izquierda: 65 66, en la derecha: 44 45 50 52 53 54 55 56
    57 58 61 66 70 117
expAsignacion (90)
    en la izquierda: 67 68, en la derecha: 46 65 66 68 119 120
expCondicional (91)
    en la izquierda: 69 70, en la derecha: 67 70
operAsignacion (92)
    en la izquierda: 71 72 73 74 75, en la derecha: 68
expOr (93)
    en la izquierda: 76 77, en la derecha: 69 70 77
expAnd (94)
    en la izquierda: 78 79, en la derecha: 76 77 79
expIgualdad (95)
    en la izquierda: 80 81 82, en la derecha: 78 79 81 82
expRelacional (96)
    en la izquierda: 83 84 85 86 87, en la derecha: 80 81 82 84 85
    86 87
expAditiva (97)
    en la izquierda: 88 89 90, en la derecha: 83 84 85 86 87 89 90
expMultiplicativa (98)
    en la izquierda: 91 92 93 94, en la derecha: 88 89 90 92 93 94
expUnaria (99)
    en la izquierda: 95 96 97 98 99 100 101 102 103 104 105, en la derecha:
    68 91 92 93 94 96 97 98 99 100 101 102 103 104
expSufijo (100)
    en la izquierda: 106 107 108 109 110 111 112, en la derecha: 95
    107 108 109 110 111 112
expPrimaria (101)
    en la izquierda: 113 114 115 116 117, en la derecha: 106
listaArgumentos (102)
    en la izquierda: 118 119 120, en la derecha: 108 120


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end            desplazar e ir al estado 2
    error           desplazar e ir al estado 3
    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    IF              desplazar e ir al estado 9
    SWITCH          desplazar e ir al estado 10
    WHILE           desplazar e ir al estado 11
    DO              desplazar e ir al estado 12
    FOR             desplazar e ir al estado 13
    RETURN          desplazar e ir al estado 14
    CONTINUE        desplazar e ir al estado 15
    BREAK           desplazar e ir al estado 16
    CASE            desplazar e ir al estado 17
    DEFAULT         desplazar e ir al estado 18
    GOTO            desplazar e ir al estado 19
    TIPO_DATO       desplazar e ir al estado 20
    ID              desplazar e ir al estado 21
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    ';'             desplazar e ir al estado 27
    '{'             desplazar e ir al estado 28
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    line               ir al estado 32
    funcion            ir al estado 33
    sentencia          ir al estado 34
    sentCompuesta      ir al estado 35
    puntero            ir al estado 36
    sentExpresion      ir al estado 37
    sentSeleccion      ir al estado 38
    sentIteracion      ir al estado 39
    sentEtiquetada     ir al estado 40
    sentSalto          ir al estado 41
    exp                ir al estado 42
    expAsignacion      ir al estado 43
    expCondicional     ir al estado 44
    expOr              ir al estado 45
    expAnd             ir al estado 46
    expIgualdad        ir al estado 47
    expRelacional      ir al estado 48
    expAditiva         ir al estado 49
    expMultiplicativa  ir al estado 50
    expUnaria          ir al estado 51
    expSufijo          ir al estado 52
    expPrimaria        ir al estado 53


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    5 line: error . ';'

    ';'  desplazar e ir al estado 54


estado 4

  115 expPrimaria: REAL .

    $default  reduce usando la regla 115 (expPrimaria)


estado 5

  114 expPrimaria: ENTERO .

    $default  reduce usando la regla 114 (expPrimaria)


estado 6

  116 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 116 (expPrimaria)


estado 7

   96 expUnaria: INCREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero      ir al estado 36
    expUnaria    ir al estado 56
    expSufijo    ir al estado 52
    expPrimaria  ir al estado 53


estado 8

   97 expUnaria: DECREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero      ir al estado 36
    expUnaria    ir al estado 57
    expSufijo    ir al estado 52
    expPrimaria  ir al estado 53


estado 9

   52 sentSeleccion: IF . '(' exp ')' sentencia
   53              | IF . '(' exp ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 58


estado 10

   54 sentSeleccion: SWITCH . '(' exp ')' sentencia

    '('  desplazar e ir al estado 59


estado 11

   55 sentIteracion: WHILE . '(' exp ')' sentencia

    '('  desplazar e ir al estado 60


estado 12

   56 sentIteracion: DO . sentencia WHILE '(' exp ')' ';'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    IF              desplazar e ir al estado 9
    SWITCH          desplazar e ir al estado 10
    WHILE           desplazar e ir al estado 11
    DO              desplazar e ir al estado 12
    FOR             desplazar e ir al estado 13
    RETURN          desplazar e ir al estado 14
    CONTINUE        desplazar e ir al estado 15
    BREAK           desplazar e ir al estado 16
    CASE            desplazar e ir al estado 17
    DEFAULT         desplazar e ir al estado 18
    GOTO            desplazar e ir al estado 19
    ID              desplazar e ir al estado 21
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    ';'             desplazar e ir al estado 27
    '{'             desplazar e ir al estado 28
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    sentencia          ir al estado 61
    sentCompuesta      ir al estado 35
    puntero            ir al estado 36
    sentExpresion      ir al estado 37
    sentSeleccion      ir al estado 38
    sentIteracion      ir al estado 39
    sentEtiquetada     ir al estado 40
    sentSalto          ir al estado 41
    exp                ir al estado 42
    expAsignacion      ir al estado 43
    expCondicional     ir al estado 44
    expOr              ir al estado 45
    expAnd             ir al estado 46
    expIgualdad        ir al estado 47
    expRelacional      ir al estado 48
    expAditiva         ir al estado 49
    expMultiplicativa  ir al estado 50
    expUnaria          ir al estado 51
    expSufijo          ir al estado 52
    expPrimaria        ir al estado 53


estado 13

   57 sentIteracion: FOR . '(' exp ';' exp ';' exp ')' sentencia

    '('  desplazar e ir al estado 62


estado 14

   61 sentSalto: RETURN . exp ';'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero            ir al estado 36
    exp                ir al estado 63
    expAsignacion      ir al estado 43
    expCondicional     ir al estado 44
    expOr              ir al estado 45
    expAnd             ir al estado 46
    expIgualdad        ir al estado 47
    expRelacional      ir al estado 48
    expAditiva         ir al estado 49
    expMultiplicativa  ir al estado 50
    expUnaria          ir al estado 51
    expSufijo          ir al estado 52
    expPrimaria        ir al estado 53


estado 15

   63 sentSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 64


estado 16

   62 sentSalto: BREAK . ';'

    ';'  desplazar e ir al estado 65


estado 17

   58 sentEtiquetada: CASE . exp ':' sentencia

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero            ir al estado 36
    exp                ir al estado 66
    expAsignacion      ir al estado 43
    expCondicional     ir al estado 44
    expOr              ir al estado 45
    expAnd             ir al estado 46
    expIgualdad        ir al estado 47
    expRelacional      ir al estado 48
    expAditiva         ir al estado 49
    expMultiplicativa  ir al estado 50
    expUnaria          ir al estado 51
    expSufijo          ir al estado 52
    expPrimaria        ir al estado 53


estado 18

   59 sentEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 67


estado 19

   64 sentSalto: GOTO . ID ';'

    ID  desplazar e ir al estado 68


estado 20

    7 funcion: TIPO_DATO . ID $@1 parametros

    ID  desplazar e ir al estado 69


estado 21

   60 sentEtiquetada: ID . ':' sentencia
  113 expPrimaria: ID .

    ':'  desplazar e ir al estado 70

    $default  reduce usando la regla 113 (expPrimaria)


estado 22

  104 expUnaria: SIZEOF . '(' expUnaria ')'
  105          | SIZEOF . '(' TIPO_DATO ')'

    '('  desplazar e ir al estado 71


estado 23

   99 expUnaria: '+' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero      ir al estado 36
    expUnaria    ir al estado 72
    expSufijo    ir al estado 52
    expPrimaria  ir al estado 53


estado 24

   98 expUnaria: '-' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero      ir al estado 36
    expUnaria    ir al estado 73
    expSufijo    ir al estado 52
    expPrimaria  ir al estado 53


estado 25

   42 puntero: '*' .
   43        | '*' . puntero

    $default  reduce usando la regla 42 (puntero)

    puntero  ir al estado 74


estado 26

  117 expPrimaria: '(' . exp ')'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero            ir al estado 36
    exp                ir al estado 75
    expAsignacion      ir al estado 43
    expCondicional     ir al estado 44
    expOr              ir al estado 45
    expAnd             ir al estado 46
    expIgualdad        ir al estado 47
    expRelacional      ir al estado 48
    expAditiva         ir al estado 49
    expMultiplicativa  ir al estado 50
    expUnaria          ir al estado 51
    expSufijo          ir al estado 52
    expPrimaria        ir al estado 53


estado 27

   51 sentExpresion: ';' .

    $default  reduce usando la regla 51 (sentExpresion)


estado 28

   23 sentCompuesta: '{' . decalracionOSentencia '}'

    $default  reduce usando la regla 24 (decalracionOSentencia)

    decalracionOSentencia  ir al estado 76


estado 29

  100 expUnaria: '~' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero      ir al estado 36
    expUnaria    ir al estado 77
    expSufijo    ir al estado 52
    expPrimaria  ir al estado 53


estado 30

  101 expUnaria: '!' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero      ir al estado 36
    expUnaria    ir al estado 78
    expSufijo    ir al estado 52
    expPrimaria  ir al estado 53


estado 31

  102 expUnaria: '&' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero      ir al estado 36
    expUnaria    ir al estado 79
    expSufijo    ir al estado 52
    expPrimaria  ir al estado 53


estado 32

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 33

    3 line: funcion .

    $default  reduce usando la regla 3 (line)


estado 34

    4 line: sentencia .

    $default  reduce usando la regla 4 (line)


estado 35

   17 sentencia: sentCompuesta .

    $default  reduce usando la regla 17 (sentencia)


estado 36

  103 expUnaria: puntero . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero      ir al estado 36
    expUnaria    ir al estado 80
    expSufijo    ir al estado 52
    expPrimaria  ir al estado 53


estado 37

   18 sentencia: sentExpresion .

    $default  reduce usando la regla 18 (sentencia)


estado 38

   19 sentencia: sentSeleccion .

    $default  reduce usando la regla 19 (sentencia)


estado 39

   20 sentencia: sentIteracion .

    $default  reduce usando la regla 20 (sentencia)


estado 40

   22 sentencia: sentEtiquetada .

    $default  reduce usando la regla 22 (sentencia)


estado 41

   21 sentencia: sentSalto .

    $default  reduce usando la regla 21 (sentencia)


estado 42

   50 sentExpresion: exp . ';'
   66 exp: exp . ',' expAsignacion

    ';'  desplazar e ir al estado 81
    ','  desplazar e ir al estado 82


estado 43

   65 exp: expAsignacion .

    $default  reduce usando la regla 65 (exp)


estado 44

   67 expAsignacion: expCondicional .

    $default  reduce usando la regla 67 (expAsignacion)


estado 45

   69 expCondicional: expOr .
   70               | expOr . '?' exp ':' expCondicional
   77 expOr: expOr . OR expAnd

    OR   desplazar e ir al estado 83
    '?'  desplazar e ir al estado 84

    $default  reduce usando la regla 69 (expCondicional)


estado 46

   76 expOr: expAnd .
   79 expAnd: expAnd . AND expIgualdad

    AND  desplazar e ir al estado 85

    $default  reduce usando la regla 76 (expOr)


estado 47

   78 expAnd: expIgualdad .
   81 expIgualdad: expIgualdad . IGUALDAD expRelacional
   82            | expIgualdad . DESIGUALDAD expRelacional

    IGUALDAD     desplazar e ir al estado 86
    DESIGUALDAD  desplazar e ir al estado 87

    $default  reduce usando la regla 78 (expAnd)


estado 48

   80 expIgualdad: expRelacional .
   84 expRelacional: expRelacional . '<' expAditiva
   85              | expRelacional . '>' expAditiva
   86              | expRelacional . MENORIGUAL expAditiva
   87              | expRelacional . MAYORIGUAL expAditiva

    MAYORIGUAL  desplazar e ir al estado 88
    MENORIGUAL  desplazar e ir al estado 89
    '>'         desplazar e ir al estado 90
    '<'         desplazar e ir al estado 91

    $default  reduce usando la regla 80 (expIgualdad)


estado 49

   83 expRelacional: expAditiva .
   89 expAditiva: expAditiva . '+' expMultiplicativa
   90           | expAditiva . '-' expMultiplicativa

    '+'  desplazar e ir al estado 92
    '-'  desplazar e ir al estado 93

    $default  reduce usando la regla 83 (expRelacional)


estado 50

   88 expAditiva: expMultiplicativa .
   92 expMultiplicativa: expMultiplicativa . '*' expUnaria
   93                  | expMultiplicativa . '/' expUnaria
   94                  | expMultiplicativa . '%' expUnaria

    '*'  desplazar e ir al estado 94
    '/'  desplazar e ir al estado 95
    '%'  desplazar e ir al estado 96

    $default  reduce usando la regla 88 (expAditiva)


estado 51

   68 expAsignacion: expUnaria . operAsignacion expAsignacion
   91 expMultiplicativa: expUnaria .

    ASIGNACION_INCREMENTO  desplazar e ir al estado 97
    ASIGNACION_DECREMENTO  desplazar e ir al estado 98
    ASIGNACION_PRODUCTO    desplazar e ir al estado 99
    ASIGNACION_DIVISION    desplazar e ir al estado 100
    '='                    desplazar e ir al estado 101

    $default  reduce usando la regla 91 (expMultiplicativa)

    operAsignacion  ir al estado 102


estado 52

   95 expUnaria: expSufijo .
  107 expSufijo: expSufijo . array
  108          | expSufijo . '(' listaArgumentos ')'
  109          | expSufijo . '.' ID
  110          | expSufijo . FLECHA ID
  111          | expSufijo . INCREMENTO
  112          | expSufijo . DECREMENTO

    INCREMENTO  desplazar e ir al estado 103
    DECREMENTO  desplazar e ir al estado 104
    FLECHA      desplazar e ir al estado 105
    '('         desplazar e ir al estado 106
    '['         desplazar e ir al estado 107
    '.'         desplazar e ir al estado 108

    $default  reduce usando la regla 95 (expUnaria)

    array  ir al estado 109


estado 53

  106 expSufijo: expPrimaria .

    $default  reduce usando la regla 106 (expSufijo)


estado 54

    5 line: error ';' .

    $default  reduce usando la regla 5 (line)


estado 55

  113 expPrimaria: ID .

    $default  reduce usando la regla 113 (expPrimaria)


estado 56

   96 expUnaria: INCREMENTO expUnaria .

    $default  reduce usando la regla 96 (expUnaria)


estado 57

   97 expUnaria: DECREMENTO expUnaria .

    $default  reduce usando la regla 97 (expUnaria)


estado 58

   52 sentSeleccion: IF '(' . exp ')' sentencia
   53              | IF '(' . exp ')' sentencia ELSE sentencia

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero            ir al estado 36
    exp                ir al estado 110
    expAsignacion      ir al estado 43
    expCondicional     ir al estado 44
    expOr              ir al estado 45
    expAnd             ir al estado 46
    expIgualdad        ir al estado 47
    expRelacional      ir al estado 48
    expAditiva         ir al estado 49
    expMultiplicativa  ir al estado 50
    expUnaria          ir al estado 51
    expSufijo          ir al estado 52
    expPrimaria        ir al estado 53


estado 59

   54 sentSeleccion: SWITCH '(' . exp ')' sentencia

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    ID              desplazar e ir al estado 55
    SIZEOF          desplazar e ir al estado 22
    '+'             desplazar e ir al estado 23
    '-'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '~'             desplazar e ir al estado 29
    '!'             desplazar e ir al estado 30
    '&'             desplazar e ir al estado 31

    puntero            ir al estado 36
    exp                ir al estado 111
    expAsignacion      ir al estado 43
    expCondicional     ir al estado 44
    expOr              ir al estado 45
    expAnd             ir al estado 46
    expIgualdad        ir al estado 47
    expRelacional      ir al estado 48
    expAditiva         ir al estado 49
    expMultiplicativa  ir al estado 50
    expUnaria          ir al estado 51
    expSufijo          ir al estado 52
    expPrimaria        ir al estado 53


estado 60

   55 sentIteracion: WHILE '(' . exp ')' sentencia
